--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import SideMenu from '../components/Side/SideMenu.astro';
 
 interface Props {
   title: string;
@@ -32,6 +33,13 @@ const {
     <ViewTransitions fallback="none" />
   </head>
   <body>
-    <slot />
+    <div class="relative h-screen p-2 gap-2 flex items-stretch">
+      <div class="w-[350px] flex-col hidden lg:flex overflow-y-auto">
+        <SideMenu />
+      </div>
+      <div class="rounded-lg bg-zinc-900 flex-1 mx-auto overflow-y-auto">
+        <slot />
+      </div>
+    </div>
   </body>
 </html>
