style: added color for text

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,5 +41,11 @@ const {
         <slot />
       </div>
     </div>
+    <style is:global>
+      body {
+        background: var(--color-background);
+        color: white;
+      }
+    </style>
   </body>
 </html>
