--- a/src/components/Side/SideItemCard.astro
+++ b/src/components/Side/SideItemCard.astro
@@ -19,4 +19,7 @@ const { playlist } = Astro.props;
       class="object-cover rounded h-full w-full shadow-[5px_0_30px_0px_rgba(0,0,0,0.3)]"
     />
   </div>
+  <div class="flex flex-col flex-auto truncate">
+    <div class="w-full flex-none font-semibold truncate">{playlist.title}</div>
+  </div>
 </a>
