--- a/src/components/Side/SideMenu.astro
+++ b/src/components/Side/SideMenu.astro
@@ -1,7 +1,7 @@
 ---
 import SideMenuItem from './SideMenuItem.astro';
 import SideItemCard from './SideItemCard.astro';
-import { playlists, sidebarPlaylists } from '../../lib/data';
+import { sidebarPlaylists } from '../../lib/data';
 ---
 
 <div class="flex flex-col flex-1 gap-2">
