feat: added style for the body and completed line of artists for the side item card

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,11 @@ const {
       </div>
     </div>
     <style is:global>
+      :root {
+        --color-primary: theme(colors.green.500);
+        --color-background: theme(colors.zinc.950);
+        --color-foreground: theme(colors.zinc.900);
+      }
       body {
         background: var(--color-background);
         color: white;
