--- a/src/components/Side/SideItemCard.astro
+++ b/src/components/Side/SideItemCard.astro
@@ -1,5 +1,6 @@
 ---
 import type { Playlist } from '../../lib/data';
+import PureInlineArtists from '../PureInlineArtists.astro';
 
 interface Props {
   playlist: Playlist;
@@ -21,5 +22,8 @@ const { playlist } = Astro.props;
   </div>
   <div class="flex flex-col flex-auto truncate">
     <div class="w-full flex-none font-semibold truncate">{playlist.title}</div>
+    <div class="flex-1 text-gray-400 text-sm truncate">
+      <PureInlineArtists artists={playlist.artists} />
+    </div>
   </div>
 </a>
