feat: added dynamic greeting in React

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import GreatingTitle from '../components/GreatingTitle';
 ---
 
-<Layout title="Home"> Home page </Layout>
+<Layout title="Home">
+  <div class="relative transition-all duration-1000 bg-context"></div>
+</Layout>
