feat: added darak mode

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const {
     <title>Spotify with transition in Astro</title>
     <ViewTransitions fallback="none" />
   </head>
-  <body>
+  <body class="dark">
     <div class="relative h-screen p-2 gap-2 flex items-stretch">
       <div class="w-[350px] flex-col hidden lg:flex overflow-y-auto">
         <SideMenu />
