--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,24 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import GreatingTitle from '../components/GreatingTitle';
+import PageHeader from '../components/PageHeader.astro';
+// import PlaylistCard from '../components/'
+import { playlists } from '../lib/data';
 ---
 
 <Layout title="Home">
-  <div class="relative transition-all duration-1000 bg-context"></div>
+  <div
+    class="relative transition-all duration-1000 bg-context"
+    style="min-height:300px;--context-color:#134e4a;"
+  >
+    <PageHeader />
+    <div class="relative z-10 px-6">
+      <GreatingTitle client:visible />
+      <div
+        class="grid sm:grid-cols-2 lg:grid-col-w xl:grid-cols-3 mt-6 gap-y-4 gap-x-6"
+      >
+        <!-- {playlists.map(playlist => )} -->
+      </div>
+    </div>
+  </div>
 </Layout>
