--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -10,4 +10,14 @@ import { Icon } from 'astro-icon/components';
   >
     <Icon name="bi:chevron-left" class="h-4 w-4 -ml-0.5" />
   </a>
+  <div class="flex items-center gap-3">
+    <a
+      target="_blank"
+      aria-label={'github repository'}
+      href="https://github.com/igorm84/spotify-astro-transitions"
+      class="text-gray-200 hover:text-white"
+    >
+      <Icon name="mdi:github" class="h-7 w-7" />
+    </a>
+  </div>
 </div>
