fix: updated link

--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -14,7 +14,7 @@ import { Icon } from 'astro-icon/components';
     <a
       target="_blank"
       aria-label={'github repository'}
-      href="https://github.com/igorm84/spotify-astro-transitions"
+      href="https://github.com/steinhardt21"
       class="text-gray-200 hover:text-white"
     >
       <Icon name="mdi:github" class="h-7 w-7" />
