--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import GreatingTitle from '../components/GreatingTitle';
 import PageHeader from '../components/PageHeader.astro';
-// import PlaylistCard from '../components/'
+import PlaylistItemCard from '../components/PlaylistItemCard.astro';
 import { playlists } from '../lib/data';
 ---
 
@@ -17,7 +17,7 @@ import { playlists } from '../lib/data';
       <div
         class="grid sm:grid-cols-2 lg:grid-col-w xl:grid-cols-3 mt-6 gap-y-4 gap-x-6"
       >
-        <!-- {playlists.map(playlist => )} -->
+        {playlists.map((playlist) => <PlaylistItemCard {playlist} />)}
       </div>
     </div>
   </div>
